New com.palantir.baseline-enable-preview-flag plugin